fix the responsive issue within popup card Popup Text is overflowing and not visible #281

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1334,15 +1334,23 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.popup-container h2 {
-  font-size: 38px;
-  font-weight: 500;
-  margin: 30px 0 10px;
+.popup-container {
+  /* font-weight: 500; */
+  /* padding: 10px; */
+  width: 50%;
+  /* height: 100%; */
+}
+
+.popup-container h4 {
+  font-size: 12px;
+  padding: 10px;
+  font-weight: bold;
+  /* margin: 30px 0 10px; */
 }
 
 .open-popup {
   visibility: visible;
-  top: 50vh;
+  top: 60vh;
   transform: translate(-50%, -50%) scale(1);
 }
 .di {
@@ -1493,6 +1501,13 @@ body {
   }
   .home-logo{
     right: 0%;
+  }
+
+  .popup-container {
+    /* font-weight: 500; */
+    padding: 10px;
+    width: 95%;
+    /* height: 100%; */
   }
 }
 .float-in{
